# moonrise-rasterizer

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example_rotating_cube.c  example_textured_cube.c  fragment.shader  main.c  sdl_helper.c  test.c  vertex.shader
include/: MRE.h  MRE_alg.h  MRE_bounding_sphere.h  MRE_color.h  MRE_color.ini  MRE_decl.h  MRE_geometry.h  MRE_graphics.h  MRE_light.h  MRE_line.h  MRE_math.h  MRE_math.ini  MRE_system.h  MRE_system.ini  MRE_texture.h  MRE_types.h
src/: MRE.c  MRE_alg.c  MRE_bounding_sphere.c  MRE_geometry.c  MRE_graphics.c  MRE_light.c  MRE_line.c  MRE_math.c  MRE_system.c  MRE_texture.c
